fix dragging + hide preview when paused on mobile

--- a/static/styles/preview.css
+++ b/static/styles/preview.css
@@ -8,6 +8,8 @@
     border-radius: 25px;
     border: 1px solid var(--bg-color);
     transition: border 0.2s;
+
+    display: none;
 }
 
 #glyph-preview.rectangle {
